--- a/css/index.css
+++ b/css/index.css
@@ -24,7 +24,7 @@ body.theme-ocean-green .card-filho p {
 
 body.theme-black-lava {
   --primary-color: #ff0015;
-  --itens-color: red;
+  --itens-color: rgb(202, 11, 11);
   --secondary-color: #8B0000;
   --text-color: #ffffff;
   --background-color: #000000;
@@ -32,6 +32,7 @@ body.theme-black-lava {
   --card-bg: #0000003e;
   --navbar-bg: rgba(0, 0, 0, 0.162);
   --footer-bg: #74282868;
+  --button-color: #79171f9f;
 }
 
 body.theme-ocean-green {
@@ -44,6 +45,7 @@ body.theme-ocean-green {
   --card-bg: rgba(255, 255, 255, 0.2);
   --navbar-bg: rgba(248, 250, 251, 0.189);
   --footer-bg: #6db7dc6f;
+  --button-color: #6cadc19f;
 }
 
 .section-title {
@@ -234,6 +236,51 @@ body.theme-ocean-green .btn-outline-light {
   padding: 50px;
 }
 
+.inicio .container {
+  padding-top: 3rem;
+}
+
+.inicio-desktop, 
+.inicio-mobile {
+  min-height: 100vh; /* ocupa toda a altura da tela */
+  width: 100%;
+}
+
+/* controla o espaçamento entre os textos */
+.inicio-desktop h1,
+.inicio-mobile h1 {
+  margin: 0 !important;
+  padding: 0 !important;
+  line-height: 1.5; /* espaçamento mais natural */
+}
+
+/* espaço pequeno entre o primeiro h1 e o typed */
+#typed-tex-desktop,
+#typed-text-mobile {
+  margin-top: 0.2rem !important;
+  font-size: 2rem;
+  margin-bottom: 0.5rem !important;
+}
+
+/* tamanho da foto */
+.foto-inicio {
+  width: 90%;
+  max-width: 600px;
+  height: auto;
+  border-radius: 50%;
+}
+
+.inicio-desktop h1.Orbitron,
+.inicio-mobile h1.Orbitron{
+  margin-top: 3rem !important; /* aumenta o espaço acima */
+}
+
+#typed-text-desktop, #typed-text-mobile {
+  margin-top: 0.5rem;
+  font-size: 2rem;
+  min-height: 5rem;
+}
+
 .card-sobre {
   padding: 30px 40px 20px;
 }
@@ -308,6 +355,25 @@ body.theme-ocean-green .card-filho h3{
 .card-filho:hover .card-overlay { opacity: 1; transform: translateY(0); }
 .card-filho:hover .card-img-top { transform: scale(1.1); }
 .card-filho:hover { transform: translateY(-5px); box-shadow: 0 10px 30px rgba(0,0,0,0.7); }
+
+.modal-img {
+  max-height: 300px;
+  width: 100%;
+  object-fit: contain;
+}
+
+.modal-text {
+  font-size: 1rem;
+  line-height: 1.6;
+  text-align: justify;
+  color: #333;
+  padding: 0 15px;
+}
+
+.modal-body {
+  overflow-y: auto;
+  max-height: 70vh;
+}
 
 /*SKILLS ANIMATION*/
 .skills-floating { position: relative; width: 100%; height: 520px; }
@@ -387,12 +453,11 @@ body.theme-ocean-green .card-filho h3{
   flex-shrink: 0;
   position: relative;
   z-index: 2;
-  margin-top: 50px;
   backdrop-filter: blur(10px);
 }
 
 .footer-asimetrico {
-  padding: 50px 20px 10px;
+  padding: 90px 20px 10px;
   min-height: 150px;
   clip-path: polygon(
      0% 80%, 20% 30%, 25% 60%, 40% 40%, 55% 10%, 70% 40%, 85% 50%, 95% 15%, 100% 80%, 100% 100%, 0% 100%
@@ -400,18 +465,82 @@ body.theme-ocean-green .card-filho h3{
 }
 
 .footer-liso {
+  padding: 30px 20px;
   min-height: 100px;
   display: flex;
   align-items: center;
   justify-content: center;
 
 }
-h1{
+.Syne{
   font-family: 'Syne Mono', monospace;
+}
+.Orbitron {
+  font-family: 'Orbitron', sans-serif;
 }
 .logoFatec {
   transition: filter 0.5s ease;
 }
 .fonte-pixel {
   font-family: 'Pixelify Sans', sans-serif;
+}
+
+.modal .modal-content {
+  background: var(--card-bg);
+  border-radius: 20px;
+  box-shadow: 0 8px 32px rgba(3, 1, 1, 0.6);
+  backdrop-filter: blur(15px) saturate(120%);
+  -webkit-backdrop-filter: blur(15px) saturate(120%);
+  color: var(--text-color); 
+  transition: all 0.3s ease;
+  max-width: 1100px;
+  width: 90%;
+  padding: 50px;
+}
+
+.modal .modal-content,
+.modal .modal-content * {
+  color: white !important;
+  scrollbar-width: none;
+  border: none;
+}
+.modal.fade .d-flex {
+  min-height: 100vh;
+}
+body.modal-open {
+  overflow: hidden !important;
+}
+.modal {
+  overflow-x: hidden !important;
+  scrollbar-width: none;
+}
+
+.modal-header .btn-close {
+  filter: invert(1);
+}
+
+.small-btn {
+  display: inline-block !important;  /* não deixa ocupar toda a largura */
+  width: auto !important;            /* garante que o botão siga o tamanho do texto */
+  padding: 8px 18px;                 /* padding compacto */
+  font-size: 0.95rem;
+  border-width: 2px;
+  margin: 0 auto;  
+  margin-top: 0.5rem !important;
+}
+
+.btn-download1{
+  display: inline-block;
+  padding: 12px 28px;
+  background-color: var(--button-color);
+  color: var(--text-color);
+  border-radius: 8px;
+  font-weight: 600;
+  text-decoration: none;
+  transition: all 0.3s ease;
+}
+
+.btn-download1:hover {
+  background: transparent;
+  color: var(--text-color);
 }
